# lazy-pulumi

./: .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
openapi/: pulumi-spec.json
src/: CLAUDE.md  app.rs  config.rs  event.rs  logging.rs  main.rs  startup.rs  theme.rs  tui.rs
src/api/: ADDING_ENDPOINTS.md  CLAUDE.md  client.rs  convert.rs  domain.rs  generated.rs  mod.rs  types.rs
src/app/: CLAUDE.md  data.rs  handlers.rs  mod.rs  neo.rs  types.rs
src/commands/: executor.rs  mod.rs  types.rs
src/components/: CLAUDE.md  editor.rs  input.rs  list.rs  mod.rs  spinner.rs
src/ui/: CLAUDE.md  commands.rs  dashboard.rs  esc.rs  header.rs  help.rs  logs.rs  markdown.rs  mod.rs  neo.rs  platform.rs  splash.rs  stacks.rs  syntax.rs
xtask/: Cargo.toml
xtask/src/: main.rs
