[package]
name = "lazy-pulumi"
version = "0.1.0"
edition = "2021"
description = "A stylish TUI for Pulumi Cloud, ESC, and NEO"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# TUI Framework
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
tui-scrollview = "0.5"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client for Pulumi API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
color-eyre = "0.6"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
urlencoding = "2"

# Syntax Highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
once_cell = "1"

# Logging (optional, for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing for splash screen
image = "0.25"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
