[workspace]
members = [".", "xtask"]

[package]
name = "lazy-pulumi"
version = "0.1.0"
edition = "2021"
description = "A stylish TUI for Pulumi Cloud, ESC, and NEO"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
tui-scrollview = "0.6"
tui-big-text = "0.8"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client for Pulumi API
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }

# Generated API client
progenitor-client = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
color-eyre = "0.6"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
urlencoding = "2"

# PTY for proper terminal emulation (streaming CLI output)
portable-pty = "0.9"

# Syntax Highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
once_cell = "1"

# Logging
log = "0.4"
tui-logger = "0.18"

# Image processing for splash screen
image = "0.25"
tui-markdown = "0.3.7"

[build-dependencies]
progenitor = "0.12"
serde_json = "1"
openapiv3 = "2"
syn = "2"
prettyplease = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
